# lore-weaver

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml  traefik.yaml
.github/workflows/: server-deploy.yml
http.conf/: certificates.yaml  dynamic.yaml
lore_weaver/: __main__.py
lore_weaver/interface/: Home.py
loreweaver/: Chart.yaml  values.yaml
loreweaver/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
loreweaver/templates/tests/: test-connection.yaml
